# medical_LLM_evaluation

./: .gitignore  README.md  pyproject.toml  transformers_llm.yml  vllm_environment.yml
.ipynb_checkpoints/: README-checkpoint.md  gitignore-checkpoint.txt  scispacy_environment-checkpoint.yml  vllm_environment-checkpoint.yml
deploy_medical_llm_evaluation/: 2final_results_deepseekr1&llama432307765.out  GPT_score33777945.out  GPT_score33778045.out  GPT_score33778126.out  GPT_score33778235.out  GPT_score33778354.out  GPT_score33778606.out  GPT_score34126405.out  GPT_score34128928.out  GPT_score34142654.out  GPT_score34160020.out  GPT_score34160797.out  GPT_score34163679.out  GPT_score34164322.out  GPT_score34164846.out  GPT_score34165602.out  GPT_score34166049.out  Untitled.ipynb  f1_raw.csv  f1_score-Copy1.py  f1_score.py  final_results31032430.out  final_results32807843.out  final_results33212387.out  final_results33212672.out  final_results33475926.out  final_results33475947.out  final_results33478392.out  final_results33479200.out  final_results33479895.out  final_results33480464.out  final_results33480466.out  final_results33480636.out  final_results33480746.out  final_results33481015.out  final_results33481367.out  final_results33481407.out  final_results33481511.out  final_results33481608.out  final_results33481856.out  (+45 more)
deploy_medical_llm_evaluation/.ipynb_checkpoints/: 2final_results_deepseekr1&llama431940434-checkpoint.out  (+66 more)
notebooks/: extracted_entities.txt  final_plots.ipynb  generate_dictionary.ipynb  get_final_csv.ipynb  plotting.ipynb  plotting_2-Copy1.ipynb
(+2891 files in other folders)
