[tool.poetry]
name = "deploy-medical-llm-evaluation"
version = "0.1.0"
description = ""
authors = ["Gonzalo Cardenal <99190773+GonzaloCardenalAl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
